--- a/index.html
+++ b/index.html
@@ -109,6 +109,54 @@ input[type="text"]{
 
 /* small fade helper */
 .fadeOut{opacity:0;transition:opacity 0.9s ease;}
+
+/* Responsive cho màn hình nhỏ */
+@media (max-width: 768px) {
+  .card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 18px;
+  }
+
+  .left {
+    padding: 0;
+  }
+
+  .logo {
+    font-size: 26px;
+  }
+
+  .subtitle {
+    font-size: 14px;
+  }
+
+  .panel {
+    width: 100%;
+    margin-top: 10px;
+  }
+
+  .popup {
+    min-width: 85%;
+    padding: 20px;
+  }
+
+  input[type="text"] {
+    font-size: 14px;
+  }
+
+  .btn {
+    font-size: 14px;
+    padding: 9px 16px;
+  }
+
+  .messagePopup {
+    top: 12%;
+    padding: 12px 16px;
+    font-size: 14px;
+  }
+}
+
 </style>
 </head>
 <body>
