--- a/index.html
+++ b/index.html
@@ -110,52 +110,93 @@ input[type="text"]{
 /* small fade helper */
 .fadeOut{opacity:0;transition:opacity 0.9s ease;}
 
-/* Responsive cho màn hình nhỏ */
+/* Responsive cơ bản (<= 768px) */
 @media (max-width: 768px) {
-  .card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px 18px;
+  body {
+    padding: 20px 8px;
   }
-
+  .card {
+    grid-template-columns: 1fr;
+    max-width: 95%;
+    padding: 20px 16px;
+  }
   .left {
     padding: 0;
+    text-align: center;
   }
-
-  .logo {
-    font-size: 26px;
+  h1, .logo {
+    font-size: 24px;
+    line-height: 1.3;
   }
-
   .subtitle {
     font-size: 14px;
+    margin-bottom: 14px;
   }
-
   .panel {
+    padding: 16px;
     width: 100%;
-    margin-top: 10px;
   }
-
-  .popup {
-    min-width: 85%;
-    padding: 20px;
-  }
-
   input[type="text"] {
-    font-size: 14px;
+    font-size: 15px;
+    padding: 10px 12px;
   }
-
   .btn {
     font-size: 14px;
-    padding: 9px 16px;
+    padding: 10px 16px;
+    flex: 1;
   }
-
-  .messagePopup {
-    top: 12%;
-    padding: 12px 16px;
+  .giftMsg {
     font-size: 14px;
   }
+  .popup {
+    width: 90%;
+    min-width: auto;
+    padding: 18px 16px;
+  }
+  .popup h2 {
+    font-size: 18px;
+  }
+  .question {
+    font-size: 14px;
+  }
+  .option span {
+    font-size: 13px;
+  }
+  #otherAnswer {
+    font-size: 13px;
+  }
+  .messagePopup {
+    width: 85%;
+    top: 10%;
+    padding: 12px 14px;
+    font-size: 13px;
+  }
 }
+
+/* Responsive mạnh hơn (<= 480px) */
+@media (max-width: 480px) {
+  h1, .logo {
+    font-size: 22px;
+  }
+  .subtitle {
+    font-size: 13px;
+  }
+  .btn {
+    font-size: 13px;
+    padding: 9px 12px;
+  }
+  .popup {
+    width: 95%;
+    padding: 16px;
+  }
+  .popup h2 {
+    font-size: 17px;
+  }
+  .question {
+    font-size: 13px;
+  }
+}
+
 
 </style>
 </head>
